vpc.tf
resource "aws_vpc" "prod-vpc" {
    cidr_block="10.0.0.0/16"
    tags={
        Name="myvpc"
    }
  
}
